Unexpected non-working flexbox gaps properties, fixed by using margins

--- a/style.css
+++ b/style.css
@@ -548,7 +548,7 @@ img {
 }
 
 .contact-and-address-info > p:first-child {
-  margin-left: 0.8cm;
+  margin-right: 0.8cm;
 }
 
 .contact-and-address-info > p {
